// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should be work with content 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><span class=\\"input-content\\"><span>test-icon</span><style>
        .input-content {
          box-sizing: content-box;
          display: flex;
          width: calc(1.687 * 16pt * .42);
          height: 100%;
          align-items: center;
          vertical-align: center;
          margin: 0;
          padding: 0 calc(1.687 * 16pt * .3);
          color: #333;
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span><input type=\\"text\\" id=\\"next-ui-0f7e073s\\" class=\\"left-content\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.687 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.687 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-4j45k6m2\\" class=\\"right-content\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"><span class=\\"input-content\\"><span>test-icon</span><style>
        .input-content {
          box-sizing: content-box;
          display: flex;
          width: calc(1.687 * 16pt * .42);
          height: 100%;
          align-items: center;
          vertical-align: center;
          margin: 0;
          padding: 0 calc(1.687 * 16pt * .3);
          color: #333;
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.687 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.687 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div></div>"
`;

exports[`Input should be work with label 1`] = `
"<div><div class=\\"with-label\\"><label id=\\"next-ui-sc0p9md6-label\\" class=\\"input-label-block\\" for=\\"next-ui-sc0p9md6\\">label<style>
        .input-label-block {
          display: block;
          font-weight: normal;
          color: #000;
          padding: 0 0 0 4px;
          margin-bottom: 4pt;
          font-size: .875rem;
          line-height: 1.5;
          -webkit-touch-callout: none; /* iOS Safari */
          -webkit-user-select: none; /* Safari */
          -khtml-user-select: none; /* Konqueror HTML */
          -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
          user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
        }
        .input-label-block > :global(*:first-child) {
          margin-top: 0;
        }
        .input-label-block > :global(*:last-child) {
          margin-bottom: 0;
        }
        .input-label-block.rounded {
          padding: 0 0 0 4pt;
        }
        .as-placeholder {
          position: absolute;
          padding: 0;
          z-index: 1;
          left: 12px;
          top: 20%;
          margin-bottom: 0;
          cursor: text;
          transition: left 0.25s ease 0s, color 0.25s ease 0s, top 0.25s ease 0s;
          color: #999;
        }
        .as-placeholder.underlined {
          left: 4px;
        }
        .as-placeholder.has-content-left {
          left: calc(12px + 1.687 * 16pt * 0.64);
        }
        .as-placeholder.hover,
        .as-placeholder.with-value {
          color: #000;
          top: -72%;
          left: 4px;
          cursor: inherit;
        }
        .as-placeholder.is-textarea {
          top: 10px;
        }
        .as-placeholder.is-textarea.hover,
        .as-placeholder.is-textarea.with-value {
          top: -28px;
        }
      </style></label><div class=\\"container input-container\\"><div class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-sc0p9md6\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" aria-labelledby=\\"next-ui-sc0p9md6-label\\" value=\\"\\"></div></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.687 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.687 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-4ubho1a0\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"><span class=\\"input-label right\\">label<style>
        .input-label {
          position: relative;
          display: inline-flex;
          width: initial;
          height: 100%;
          font-weight: 500;
          align-items: center;
          pointer-events: none;
          margin: 0;
          background: rgba(153, 153,153,0.3);
          padding: 0 8pt;
          color: #999;
          font-size: .875rem;
          line-height: 1;
        }
        .right {
          border-top-right-radius: 12px;
          border-bottom-right-radius: 12px;
        }
        .left {
          border-top-left-radius: 12px;
          border-bottom-left-radius: 12px;
        }
        .underlined.left:after,
        .underlined.right:before {
          position: absolute;
          content: '';
          height: 70%;
          top: 15%;
          bottom: 0;
          width: calc(0px / 2);
          box-shadow: 0 2px 4px 0px rgb(0 0 0 / 8%);
          background: #999;
        }
        .underlined.left:after {
          right: 0;
        }
        .underlined.right:before {
          left: 0;
        }
        .bordered:after,
        .bordered:before {
          display: none;
        }
      </style></span></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.687 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.687 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><span class=\\"input-label left\\">label<style>
        .input-label {
          position: relative;
          display: inline-flex;
          width: initial;
          height: 100%;
          font-weight: 500;
          align-items: center;
          pointer-events: none;
          margin: 0;
          background: rgba(153, 153,153,0.3);
          padding: 0 8pt;
          color: #999;
          font-size: .875rem;
          line-height: 1;
        }
        .right {
          border-top-right-radius: 12px;
          border-bottom-right-radius: 12px;
        }
        .left {
          border-top-left-radius: 12px;
          border-bottom-left-radius: 12px;
        }
        .underlined.left:after,
        .underlined.right:before {
          position: absolute;
          content: '';
          height: 70%;
          top: 15%;
          bottom: 0;
          width: calc(0px / 2);
          box-shadow: 0 2px 4px 0px rgb(0 0 0 / 8%);
          background: #999;
        }
        .underlined.left:after {
          right: 0;
        }
        .underlined.right:before {
          left: 0;
        }
        .bordered:after,
        .bordered:before {
          display: none;
        }
      </style></span><input type=\\"text\\" id=\\"next-ui-59jufnf2\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.687 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.687 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div></div>"
`;

exports[`Input should work with different sizes 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-fdk70op8\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 7px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.2 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 7px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.2 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .75rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-dqmg7r7f\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 9px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.5 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 9px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.5 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .75rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-00v50avm\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 14px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.875 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 14px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.875 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: 1rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-82q04n2e\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 15px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(2.25 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 15px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2.25 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: 1.25rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-spnnajea\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: 50%;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.687 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.687 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div></div>"
`;

exports[`Input should work with different status 1`] = `
"<div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-nugbkcnn\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.687 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #7928ca;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.687 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #7928ca;
            box-shadow: 0 0 0 0px
              #7928ca;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-97i4082n\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.687 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #17c964;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.687 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #17c964;
            box-shadow: 0 0 0 0px
              #17c964;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div class=\\"with-label\\"><div class=\\"container input-container\\"><label class=\\"wrapper shadow input-wrapper\\"><input type=\\"text\\" id=\\"next-ui-oorboo74\\" class=\\"\\" placeholder=\\"\\" autocomplete=\\"off\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"helper-text-container\\"></div><style>
          .with-label {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
          }
          .container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .input-container {
            display: inline-flex;
            align-items: center;
            height: calc(1.687 * 16pt);
          }
          .wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .wrapper.shadow {
            transition: all 0.25s ease;
          }
          .wrapper.bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .wrapper.underlined {
            background: transparent;
          }
          .wrapper.underlined::after {
            content: '';
            position: absolute;
            bottom: 0;
            width: 100%;
            height: 0px;
            z-index: 1;
            background: #eaeaea;
          }
          .wrapper.underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #f5a623;
            transition: width 0.25s ease;
          }
          .wrapper.hover.underlined::before {
            width: 100%;
          }
          .wrapper.disabled {
            background-color: #eaeaea;
            border-color: #eaeaea;
            box-shadow: inset 0 0 40px 0 rgb(0 0 0 / 14%);
            cursor: not-allowed;
          }
          .helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.687 * 8pt * -1);
            transition: opacity 0.25s ease;
          }
          .helper-text-container.with-value {
            opacity: 1;
          }
          .helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .container.hover:not(.read-only) {
            transform: translateY(-2px);
          }
          .wrapper.shadow.hover:not(.read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .container:hover .wrapper.bordered,
          .container.hover:not(.read-only) .wrapper.bordered {
            border-color: #f5a623;
            box-shadow: 0 0 0 0px
              #f5a623;
          }
          input.disabled,
          textarea.disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.rounded,
          textarea.rounded {
            padding: 0 4pt;
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .wrapper:not(.underlined) input,
          .wrapper:not(.underlined) textarea {
            margin: 4px 10px;
          }
          .wrapper.underlined input,
          .wrapper.underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            box-shadow: none;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            outline: none;
            border-radius: 0;
            width: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          textarea:not(.underlined) {
            padding: 4pt;
          }
          input.left-content,
          textarea.left-content {
            margin-left: 0;
          }
          input.right-content,
          textarea.right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div></div>"
`;
